--- a/games/knowledge-tree/style.css
+++ b/games/knowledge-tree/style.css
@@ -8,7 +8,8 @@ body {
 #game {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 500px;
 }
 
 #gameCanvas {
@@ -17,6 +18,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  display: block;
+  border: 4px groove var(--cor-principal);
+  border-radius: 16px;
+  box-sizing: border-box;
 }
 
 #correctGuesses {
